# Decision-Intelligence-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  plan.md
backend/: .coverage  .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: settings.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  loader.py  prompts.py  retriever.py  store.py
backend/app/routers/: health.py  ingest.py  observability.py  priority.py  query.py
backend/app/schemas/: ingest.py  observability.py  priority.py  query.py
backend/app/services/: generator.py  llm_client.py  llm_predictor.py  ml_predictor.py  obs_logger.py  query_logger.py  retriever.py
backend/app/utils/: feature_extractor.py  ingest_all.py  prompt_guard.py
backend/scripts/: ingest.py
backend/tests/: test_feature_extractor.py  test_health.py  test_llm_client.py  test_llm_predictor.py  test_settings.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerPanel.tsx  ComparisonTable.tsx  ObservabilityPage.tsx  QueryInput.tsx  SourcePanel.tsx
frontend/src/types/: index.ts
notebooks/: knowledge_preprocessing.ipynb  notebook.ipynb
resources/: week_1_day_4_solution.ipynb  week_2_day_2_solution.ipynb  week_2_day_3_solution.ipynb  week_2_day_4_solution.ipynb
